[metadata]
name = mts_balance_checker
version = 0.1.1
author = AsmanovLev
author_email = asmanovlev@gmail.com
description = CLI utility for checking MTS balance, traffic, and SMS from the command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AsmanovLev/MTS-Balance-Checker
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console

[options]
py_modules = mts_balance_checker
install_requires =
    requests
python_requires = >=3.7

[options.entry_points]
# This line creates the executable command 'mts-check' that runs the main function in your script
console_scripts =
    mts-check = mts_balance_checker:main

[options.packages.find]
exclude =
    tests*
